--- a/about.html
+++ b/about.html
@@ -45,6 +45,9 @@
             </div>
         </div>
         <div class="grid-3">
+            <div class="founder-img2">
+                <img src="khoshna.jpg" alt="Founder-Img" width="100%" height="430px" object-fit="cover">
+            </div>
         </div>
         <div class="grid-4">
             <div class="grid4-text">
